@@ -12,10 +12,13 @@ public class SyntaxParserFactory {
             throw new IllegalArgumentException("Empty token list");
         }
 
-        Token firstToken = tokens.getFirst();
+        Token firstToken = tokens.get(0);
         if (firstToken.getType() == TokenType.LET_KEYWORD) {
             return new AssignationSyntaxParser();
-        } else  {
+        } else if (firstToken.getType() == TokenType.IDENTIFIER) {
+            return new ReassignationSyntaxParser();
+        }
+        else {
             return new PrintSyntaxParser();
         }
     }
